<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scroller"
    android:background="#ffff0005">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffc2ffec"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="QuickHull"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="#ffff6b1d"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/maintext1"
            android:text="@string/quickhull"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColorLink="#ff29ff6a"
            android:textColor="#d9001d12" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/quickhull"
            android:layout_gravity="center"/>
        <ImageView
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/qhcode"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/solver1"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColorLink="#ff29ff6a"
            android:textColor="#d9001d12" />

        <ImageView
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/solver1"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solver2"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColorLink="#ff29ff6a"
            android:textColor="#d9001d12" />
        <ImageView
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/solver3"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solver4"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColorLink="#ff29ff6a"
            android:textColor="#d9001d12" />

        <ImageView
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/solver4"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solver5"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColorLink="#ff29ff6a"
            android:textColor="#d9001d12" />

    </LinearLayout>
</ScrollView>



