<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scroller"
    android:background="#ffff0016">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffc2ffec"
    android:layout_marginTop="4dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="4dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Abstract"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="#ffff6b1d"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/maintext1"
        android:text="@string/maintext1"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:textColorLink="#ff29ff6a"
        android:textColor="#d9001d12" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="About Divide and Conquer algorithms"
        android:textSize="30sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="#ffff6d00"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dcalgo"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"

        android:textColorHighlight="@color/stackbar_fill1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Job. The Atomic"
        android:textSize="30sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:gravity="center"

        android:textColor="#ffff7e32"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jobintro"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:theme="@android:style/Animation"
        android:textColorHighlight="#ffaaff8a"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="250dp"

        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:theme="@android:style/Animation"
        android:textColorHighlight="#ffaaff8a"
        />
</LinearLayout>
</ScrollView>



